--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml"
 
   grafana:
-    image: grafana/grafana
+    image: grafana/grafana:7.0.0
     ports:
       - "3000:3000"
     volumes:
