--- a/grafana/provisioning-dashboard.yml
+++ b/grafana/provisioning-dashboard.yml
@@ -2,7 +2,7 @@ apiVersion: 1
 
 providers:
 - name: 'corelight-dashboards'
-  folder: ''
+  folder: 'Corelight'
   type: file
   disableDeletion: true
   editable: true
