--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.5'
 services:
   prometheus:
     image: prom/prometheus
+    restart: unless-stopped
     expose:
       - "9092"
     volumes:
@@ -10,6 +11,7 @@ services:
 
   grafana:
     image: grafana/grafana:7.0.0
+    restart: unless-stopped
     ports:
       - "3000:3000"
     volumes:
